# ROS2_FYP_Repo

./: .gitignore  .gitmodules  model.xacro.urdf
metadata/: ouster_metadata.json
recordings/videos/: lab_video.avi  test.avi
src/av_car/: CMakeLists.txt  package.xml
src/av_car/config/: ouster_params.yaml  ouster_rviz_with_bev.rviz
src/av_car/launch/: gazebo_with_bev_launch.py  play_recorded_data_launch.py  recording_launch.py  rviz_launch.py  sensor_launch.py  sensor_with_bev_launch.py
src/bev/: CMakeLists.txt  package.xml
src/bev/src/: read_bag.cpp
src/bev_py/: package.xml  setup.cfg  setup.py
src/bev_py/bev_py/: gazebo_sensor_bev.py  live_sensor_bev.py  make_bounding_box.py  make_pcap_bev_video_client.py  make_pcap_bev_video_server.py  record_bev_video.py  rviz_with_bev.py
src/bev_py/config/cfg/: complex_yolov5s.cfg
src/bev_py/data_process/: kitti_bev_utils.py
src/car_model/: CMakeLists.txt  controller_msgs.yaml  package.xml
src/car_model/config/: base_config.rviz  controller.yaml  lidar_config.rviz  ros_gz_bridge.yaml  rosbag_gazebo.rviz  updated_config.rviz
src/car_model/launch/: ackermann_controller.py  gazebo_model_launch.py  launch_gazebo.py  rviz_launch.py
src/car_model/urdf/: AV_car.xacro.urdf  ackermann_demo.xacro.urdf  ackermann_joints.xacro  controller.xacro  gz_ackermann_controller.xacro  gz_ackermann_demo.sdf  gz_ackermann_demo.xacro.urdf  gz_plugins.xacro  wheel.xacro
src/car_model/worlds/: car_world.sdf  test_world.sdf
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/srv/: Box.srv  GenerateBEV.srv
src/rviz_visualization/: CMakeLists.txt  package.xml
src/rviz_visualization/src/: bounding_box.cpp  bounding_box_client.cpp  bounding_box_server.cpp
